# Personal-AI-Employee

./: .env.example  .gitignore  .linkedin_session.json  .mcp.json  CLAUDE.md  README.md  login_linkedin.bat  pyproject.toml  runnnnn.txt  save_linkedin_session.py  start_email_watcher.bat  start_gmail_watcher.bat  start_linkedin_watcher.bat  start_twitter_poster.bat
.claude/: settings.local.json
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md  Profile.md  filesystem_watcher.py
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Approved/: APPROVAL_20260220_invoice_client_a.md  PLAN_LinkedIn_Your_posts_got_13_impressions_181248_20260326_164926.md  PLAN_linkedin_post_test_20260326_175622.md  final_post_demo.md  linkedin_post_test - Copy - Copy.md
AI_Employee_Vault/Briefings/: Analysis_2026-03-25_170254.md  Analysis_2026-03-26_001951.md  Analysis_2026-03-26_023628.md  Analysis_2026-03-26_164933.md  Analysis_2026-03-26_175622.md
AI_Employee_Vault/Inbox/: client_b_message.txt  invoice_test.txt
AI_Employee_Vault/Logs/: .gmail_seen_ids.json  .linkedin_seen_ids.json  2026-02-20.json  2026-02-23.json  2026-02-25.json  2026-02-26.json  2026-03-01.json  2026-03-14.json  2026-03-18.json  2026-03-25.json  2026-03-26.json
AI_Employee_Vault/Pending_Approval/: APPROVAL_20260220_invoice_client_b.md
src/: analyzer.py  base_watcher.py  email_watcher.py  filesystem_watcher.py  gmail_auth.py  gmail_sender.py  gmail_watcher.py  linkedin_oauth.py  linkedin_watcher.py  mcp_server.py  orchestrator.py  social_media_manager.py  twitter_poster.py
(+115 files in other folders)
